--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "@react-three/drei": "^10.0.7",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.9.2",
+    "mafs": "^0.21.0",
+    "motion": "^12.9.2",
+    "next": "15.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-next-parallax": "^0.1.0",
+    "tailwind-merge": "^3.2.0",
+    "three-globe": "^2.42.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
